--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
   </head>
   <body>
     깃 테스트
+
+    <!--
+        1. 처음 프로젝트 생성하고
+            - git add 파일명
+            - git config --global user.email "내 이메일", git config --global user.name "내 이름"
+            - git commit -m "커밋 메시지"
+            - 깃허브 홈페이지에서 레파지토리(프로젝트 저장소) 생성
+            - git remote add origin 레파지토리 주소
+            - git push -u origin master
+
+        * git status
+        * git log
+    -->
   </body>
 </html>
