Edit html message

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             - 깃허브 홈페이지에서 레파지토리(프로젝트 저장소) 생성
             - git remote add origin 레파지토리 주소
             - git push -u origin master
+        2. 프로젝트 업데이트
+            - git add 파일명
+            - git commit -m "커밋 메시지"
+            - git push origin master
 
         * git status
         * git log
