--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             - git add 파일명
             - git commit -m "커밋 메시지"
             - git push origin master
+        3. pc에 프로젝트가 없을때 다운받는법
+            - git clone 레파지토리 주소
 
         * git status
         * git log
