--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
             - git push origin master
         3. pc에 프로젝트가 없을때 다운받는법
             - git clone 레파지토리 주소
+        4. branch 생성
+            - git checkout -b 브랜치명
+              - git branch : 생성되어있는 브랜치 리스트와, 현재 작업중인 브랜치명 확인
+        5. 협업 방법
+            - 작업 완료 후
+            - git add 파일명
+            - git commit -m "커밋 메시지"
+            - git push origin 브랜치명
+            - 깃허브 홈페이지에서 pull Requst 버튼 누른 후 merge까지 할 것.(현재 브랜치에서 master브랜치에 업데이트)
+        6. pc에서 깃서버 master에 있는 최신 작업물 내려받기
+            - git pull origin master
 
         * git status
         * git log
